--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "@types/screeps-profiler": "^1.2.5",
+    "screeps-profiler": "^2.0.1",
     "source-map": "~0.6.1"
   }
 }
